--- a/dapp/src/themes/style.scss
+++ b/dapp/src/themes/style.scss
@@ -143,6 +143,13 @@ a {
   @include font-plex();
 }
 
+a.hover-underline {
+  &:hover {
+    text-decoration: underline;
+    text-underline-offset: 3px;
+  }
+}
+
 a span {
   text-decoration: underline;
 }
@@ -197,6 +204,11 @@ h5 {
 }
 
 p.small {
+  @include font-plex();
+  font-size: 0.7rem;
+}
+
+span.small {
   @include font-plex();
   font-size: 0.7rem;
 }
@@ -265,6 +277,18 @@ p.small {
   }
 }
 
+.color-secondary {
+  color: var(--secondary-color);
+}
+
+.color-error {
+  color: var(--error-color);
+}
+
+.control.has-icons-right .input, .control.has-icons-right .select select {
+  padding-right: 30px !important;
+}
+
 .fixed-width {
   width: auto;
   min-width: 100px;
@@ -279,12 +303,7 @@ p.small {
     margin: 0;
   }
 }
-.color-secondary {
-  color: var(--secondary-color);
-}
-.color-error {
-  color: var(--error-color);
-}
+
 .no-scroll {
   overflow: hidden !important;
   overflow-y: hidden !important;
@@ -299,6 +318,14 @@ p.small {
   position: absolute;
   top: 10px;
   right: 30px;
+  font-size: 0.9rem;
+  color: #7d7c77;
+  @include font-inter();
+}
+.placeholder-input-search {
+  position: absolute;
+  top: 10px;
+  right: 10px;
   font-size: 0.9rem;
   color: #7d7c77;
   @include font-inter();
@@ -353,12 +380,8 @@ input,
 }
 
 .b-tooltip.is-info .tooltip-content {
-  background-color: var(--primary-color);
+  background: var(--primary-color) !important;
   color: var(--tertiary-color-light);
-}
-
-.b-tooltip.is-info .tooltip-content {
-  background-color: var(--primary-color);
 }
 
 .b-tooltip.is-right.is-info .tooltip-content::before {
@@ -367,6 +390,10 @@ input,
 
 .b-tooltip.is-top.is-info .tooltip-content::before {
   border-top-color: var(--primary-color);
+}
+
+.b-tooltip.is-bottom.is-info .tooltip-content::before {
+  border-bottom-color: var(--primary-color);
 }
 
 .btn-active {
