--- a/app/src/themes/landing/style.scss
+++ b/app/src/themes/landing/style.scss
@@ -11,6 +11,11 @@ body {
 }
 
 .landing {
+  .disabled {
+    opacity: 0.5 !important;
+    pointer-events: none !important;
+  }
+
   .bg-theme-colored {
     background-color: var(--landing-primary-color);
     background-position: center;
